@@ -16,7 +16,7 @@ apply plugin: 'com.github.johnrengelman.shadow'
 
 group 'org.checkerframework'
 // TODO: Use this in the release process.
-version '3.9.15'
+version '3.16.0'
 
 sourceCompatibility = 1.8
 
@@ -64,11 +64,16 @@ dependencies {
         errorproneJavac("com.google.errorprone:javac:$errorproneJavacVersion")
     }
     implementation 'org.plumelib:bcel-util:1.1.12'
+    if (JavaVersion.current() == JavaVersion.VERSION_1_8) {
+        implementation 'org.plumelib:options:1.0.5'
+    } else {
+        implementation 'org.plumelib:options:2.0.0'
+    }
     implementation 'org.plumelib:options:1.0.5'
     implementation 'org.plumelib:plume-util:1.5.5'
     implementation 'org.plumelib:reflection-util:1.0.3'
     // Annotations in checker-qual.jar are used, but no checkers are (currently) run on the code.
-    compileOnly 'org.checkerframework:checker-qual:3.15.0'
+    compileOnly 'org.checkerframework:checker-qual:3.16.0'
     implementation 'com.google.errorprone:error_prone_annotations:2.7.1'
     implementation ('org.checkerframework.annotatedlib:guava:30.1.1-jre') {
         // So long as Guava only uses annotations from checker-qual, excluding it should not cause problems.
@@ -77,7 +82,7 @@ dependencies {
     implementation 'org.ow2.asm:asm:9.2'
 
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
-    testImplementation 'org.checkerframework:checker-qual:3.15.0'
+    testImplementation 'org.checkerframework:checker-qual:3.16.0'
 
     errorprone("com.google.errorprone:error_prone_core:2.7.1")
 }
@@ -473,6 +478,16 @@ def createCheckTypeTask(checker, shortName) {
                     "-Xbootclasspath/p:${checkerDist}/jdk8.jar"
             ]
             options.forkOptions.jvmArgs += ["-Xbootclasspath/p:${configurations.javacJar.asPath}".toString()]
+        } else {
+            options.forkOptions.jvmArgs += [
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                    "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+            ]
         }
     }
 }
@@ -502,6 +517,7 @@ test.dependsOn testAnnotator
 
 javadoc {
     options.memberLevel = JavadocMemberLevel.PUBLIC
+    options.addStringOption('source', '8')
     options.addStringOption('Xdoclint:all', '-quiet')
     options.addStringOption('Xmaxwarns', '10000')
     options.JFlags = [
@@ -537,10 +553,13 @@ task requireJavadoc(type: JavaExec) {
 }
 // check.dependsOn requireJavadoc
 
-task updateUserOptions(type: Javadoc, dependsOn: 'assemble') {
-  description "Updates printed documentation of command-line arguments."
+task updateUserOptions(dependsOn: ['updateUserOptionsJavadoc', 'updateUserOptionsHtml']) {}
 
-  // source = sourceSets.main.allJava.files.sort()
+task updateUserOptionsJavadoc(type: Javadoc, dependsOn: 'assemble') {
+  description "Updates documentation of command-line arguments in Javadoc."
+
+  // Include only sources from annotation-file-utilities, not from scene-lib.
+  source = fileTree(dir: 'src', include: '**/*.java')
   exclude 'scenelib.annotations.io.classfile/**'
   classpath = project.sourceSets.main.compileClasspath + project.sourceSets.main.runtimeClasspath
   options.memberLevel = JavadocMemberLevel.PRIVATE
@@ -549,6 +568,30 @@ task updateUserOptions(type: Javadoc, dependsOn: 'assemble') {
   options.addStringOption("docfile", "${projectDir}/src/annotator/Main.java")
   options.addStringOption("format", "javadoc")
   options.addStringOption("i", "-quiet")
+  if (JavaVersion.current().compareTo(org.gradle.api.JavaVersion.VERSION_1_9) >= 0) {
+    options.addStringOption('source', '8')
+  }
+  options.noTimestamp(false)
+  title = ""
+}
+
+task updateUserOptionsHtml(type: Javadoc, dependsOn: 'assemble') {
+  description "Updates documentation of command-line arguments in the manual."
+
+  // Include only sources from annotation-file-utilities, not from scene-lib.
+  source = fileTree(dir: 'src', include: '**/*.java')
+  exclude 'scenelib.annotations.io.classfile/**'
+  classpath = project.sourceSets.main.compileClasspath + project.sourceSets.main.runtimeClasspath
+  options.memberLevel = JavadocMemberLevel.PRIVATE
+  options.docletpath = project.sourceSets.main.runtimeClasspath as List
+  options.doclet = "org.plumelib.options.OptionsDoclet"
+  options.addStringOption("docfile", "${projectDir}/annotation-file-utilities.html")
+  options.addStringOption("format", "html")
+  options.addStringOption("i", "-quiet")
+  if (JavaVersion.current().compareTo(org.gradle.api.JavaVersion.VERSION_1_9) >= 0) {
+    options.addStringOption('source', '8')
+  }
+  options.noTimestamp(false)
   title = ""
 }
 
